[K/N] Add MemorySegment-based UnsafeMemoryAccess for JDK 25+ via MR-JAR
The implementation of `UnsafeMemoryAccess` uses the memory access 
methods of `sun.misc.Unsafe` which are deprecated for removal in JDK 23
(https://openjdk.org/jeps/471) and trigger runtime warnings in JDK 24+
(https://openjdk.org/jeps/498).

To address that, this commit adds a new implementation of
`UnsafeMemoryAccess` that is based on FFM API
(https://openjdk.org/jeps/454), e.g. `MemorySegment` and `Linker`.

FFM API is available only in JDK 22+. So, to keep the compiler able to
run on older JDK versions, this commit applies the Multi-Release JAR
approach (https://openjdk.org/jeps/238) to select the appropriate
implementation at runtime. The new implementation is used only on
JDK 25+.
It is technically possible to use it on JDK 22+, but the CI has only
JDK 25, so it is easier and more reliable to limit the change to
JDK 25+.

Key design decisions in the MemorySegment impl:
- Global segment via
  `MemorySegment.ofAddress(0L).reinterpret(Long.MAX_VALUE)` for
  performance reasons. See KT-85209 for details on the trade-offs.
- Unaligned value layouts (`JAVA_INT_UNALIGNED`, etc.) to match `Unsafe`
  semantics which don't enforce alignment. The call sites can also
  potentially request unaligned access.
- `malloc`/`free` via FFI downcalls since Arena doesn't support
  individual free.

This commit also adds unit tests running on JDK 25:
- It enables the existing `UnsafeMemoryAccess` test suite for the new
  implementation. This also checks the MR-JAR-based selection machinery.
- It adds a new test suite checking specifically that accesses through
  one implementation expectedly affect accesses through another. E.g.
  that data written with the old impl can be read with the new one.
- As a side effect, it also enables testing the old implementation on
  JDK 25. It is nice to have a fallback.

The new tests can also be triggered by running the existing task
`:nativeCompilerUnitTest`. This enables the